# raytsystem-public-os

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  README.ru.md  ROADMAP.md  SECURITY.md  SUPPORT.md  WIKI.md  WORK.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: __init__.py  graph_first.py  graph_first_questions.json
config/: platform.yaml  policies.yaml  raytsystem.toml  runtime-adapters.yaml  sources.yaml
docs/: 01-research-report.md  02-target-architecture.md  04-security-scope.md  06-raytsystem-landscape.md  07-web-control-plane-architecture.md  09-layout-quality-process.md  10-execution-security.md  11-code-graph-and-execution-plane.md  12-platform-capabilities.md  13-documents-workspace-architecture.md  14-documents-security-review.md  DEPENDENCIES.md  STATUS.md  THIRD_PARTY_NOTICES.md
knowledge/: .projection.json  graph.json  hot.md  index.md
scripts/: public_hygiene.py  public_snapshot.py
tests/: conftest.py  platform_helpers.py  test_adapters.py  test_bootstrap.py  test_brand_migration.py  test_catalog.py  test_cli.py  test_codegraph_benchmark.py  test_codegraph_contracts.py  test_codegraph_projection.py  test_codegraph_querying.py  test_codegraph_security.py  test_contracts.py  test_control.py  test_documents.py  test_documents_performance.py  test_execution_adapters.py  test_execution_config.py  test_execution_employees.py  test_execution_leases.py  test_execution_policy.py  test_execution_service.py  test_execution_sessions.py  test_execution_store.py  test_execution_workspace.py  test_git_checkpoint.py  test_graph_first_benchmark.py  test_ingestion.py  test_m2_contracts.py  test_m2_lint_save.py  test_m2_search_query.py  test_m3_agent_policy.py  test_m3_checkpoint_guard.py  test_m3_routing.py  test_m3_session_resume.py  test_m5a_qualification.py  test_path_policy.py  test_platform_backup.py  test_platform_emergency.py  test_platform_evals.py  (+30 more)
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.browser.config.ts  vitest.github.config.ts
website/: docusaurus.config.ts  package-lock.json  package.json  (+1 more)
(+765 files in other folders)
